Form margin fixed on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,6 +185,7 @@ p.copyright {
 }
 
 #email{
+  margin: 0 auto;
   width: 240px;
 }
 
